Added a lot of stuff

--- a/ToDo-API/appsettings.json
+++ b/ToDo-API/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "SecretKey" : "testKey1i374oi72340923409823498239042389ljksdafkj,bndsvc",
+    "Issuer" : "https://api.todo.com",
+    "Audience": "https://api.todo.com"
+  },
   "ToDoDatabase" : {
     "ConnectionURI": "mongodb://localhost:27017",
     "DatabaseName": "ToDoApp",
