--- a/ToDo-API/ToDo-API.csproj
+++ b/ToDo-API/ToDo-API.csproj
@@ -8,9 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.OAuth" Version="2.2.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0-preview5" />
+
     </ItemGroup>
+
 
 
 
